Mantis ChangeLog

0.18.0??

 * Fix: #2938: 'Double quotes not handled correctly in manage_custom_field_edit_page' 
 * Fix: handle special characters correctly in the rest of the manage_custom_field_* pages
 * Fix: #2937: 'Double quotes not handled correctly in version names'
 * Fix: #2936: 'SYSTEM WARNING: ob_gzhandler() used twice'

2003.02.16  -  0.18.0a1

 This release contains literally hundreds, if not thousands, of changes.
 Upcoming releases will hopefully follow a *much* quicker release cycle now
 that we are back on track.

 This marks the first release of Mantis with a completely refactored API
 library.  All the API files are in the core/ directory should you wish to
 examine them in more detail.  The process of cleaning up the APIs and making
 sure all the pages use them is still not quite complete, but we are getting
 close

 Listing every individual change would be unproductive but the key ones are
 listed or summarized below:

 * Behaviour change: made 'normal' the default priority for new bugs
 * Behaviour change: Merged default/config_inc1.php and default/config_inc2.php in config_inc.php in the main directory
 * Behaviour change: Removed f_ prefix from POST and GET field names
 * Changed config options (*_color): now use $g_status_colors['<status color>'] array. For example, $g_new_color is replaced with $g_status_colors['new'].
 * Changed config options (default_advanced_report, default_advanced_view, default_advanced_update): now ON/OFF instead of BOTH/SIMPLE/ADVANCED (they never worked the other way anyway)
 * Changed config options (login_method): the constant CRYPT_FULL_SALT is now deprecated and should be replaced with CRYPT, which behaves exactly the same, or MD5
 * Code cleanup: added validation checks for all inputs that are passed on to database queries
 * Code cleanup: db_prepare_string(), db_prepare_int(), and db_prepare_bool() to be called on data before it goes into the database