@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: constant_inc.php,v 1.1 2003-02-14 19:06:55 jfitzell Exp $
+	# $Id: constant_inc.php,v 1.2 2003-02-17 03:56:34 vboctor Exp $
 	# --------------------------------------------------------
 
 	###########################################################################
@@ -176,6 +176,7 @@
 	define( 'ERROR_PROJECT_NOT_FOUND',				700 );
 	define( 'ERROR_PROJECT_NAME_NOT_UNIQUE',		701 );
 	define( 'ERROR_PROJECT_NAME_INVALID',			702 );
+	define( 'ERROR_PROJECT_INVALID_UPLOAD_PATH',			703 );
 
 	# ERROR_USER_*
 	define( 'ERROR_USER_NAME_NOT_UNIQUE',			800 );
